// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookContainer should match the snapshot 1`] = `
<section>
  <h2
    className="book-title-header"
  >
     New York Times Best Sellers
  </h2>
  <div
    className="book-wrapper"
  >
    <Connect(Book)
      key="W9E-4elcS"
      title="Golden"
    />
    <Connect(Book)
      key="KpMznBGRWy"
      title="Xavier"
    />
  </div>
</section>
`;

exports[`BookContainer should match the snapshot the books are passed as props 1`] = `
<section>
  <h2
    className="book-title-header"
  >
     New York Times Best Sellers
  </h2>
  <div
    className="book-wrapper"
  >
    <Connect(Book)
      key="E9wiONP0vg"
      title="Press, Press, Press, Press, Press"
    />
  </div>
</section>
`;

exports[`BookContainer should match the snapshot when there is an error message 1`] = `
<section>
  <h2
    className="book-title-header"
  >
     New York Times Best Sellers
  </h2>
  <div
    className="book-wrapper"
  >
    <div>
      <h2>
        something went wrong
      </h2>
      <Link
        to="/Options"
      >
        Back
      </Link>
    </div>
    <Loading />
  </div>
</section>
`;
